--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ li span {
 <body>
 
 <div class="container">
-  <h1 id="headline">Countdown to my birthday:</h1>
+  <h1 id="headline">Countdown to my Birfday:</h1>
   <div id="countdown">
     <ul>
       <li><span id="days"></span>days</li>
